# uor-os

./: .env.example  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature-request.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
.lovable/: plan.md
.lovable/memory/: index.md
docs/: EDGE-FUNCTIONS.md  PORTABILITY.md
public/: 404.html  CNAME  agent-discovery.md  audio-capture-worklet.js  llms-full.md  llms.md  llms.txt  openapi.json  robots.txt  sitemap.xml  spa-redirect.js  uor_q0.jsonld
public/contexts/: uns-v1.jsonld  uor-v1.jsonld  uor-vocabulary.jsonld
public/cursor-rules/: uor-trust-stamp.mdc
public/rules/: uor-trust-stamp-vscode.md  uor-trust-stamp-windsurf.md
public/shacl/: cert-required-fields.ttl  critical-identity-proof.ttl  datum-term-disjoint.ttl  derivation-id-format.ttl  partition-cardinality.ttl  partition-density-range.ttl  succ-composition.ttl  trace-certifiedby.ttl  transition-frames.ttl
public/shapes/: uor-shapes.ttl
public/tools/: uor_certify.json  uor_derive.json  (+2 more)
src/: App.tsx  custom-sw.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
supabase/: config.toml
(+1580 files in other folders)
