[package]
name = "uor-os"
version = "2.0.0"
description = "UOR Foundation — Sovereign Virtual Operating System"
authors = ["UOR Foundation"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-store = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-autostart = { version = "2", features = ["xdg"] }
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hostname = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# ── UOR Foundation ──────────────────────────────────────────────────────
# The canonical Rust crate: 441 traits, 892 properties, enforcement layer.
# Compiled natively into the Tauri backend — zero WASM overhead.
uor-foundation = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
